# reposhield

./: QUICK_SETUP.md  README.md  SETUP_GUIDE.md  SINGLE_SERVICE_DEPLOYMENT.md  pyproject.toml  reposhield.db  requirements.txt  test-build.sh
docs/: ARCHITECTURE.md  CONFIDENCE.md  FALSE_POSITIVE_REGISTER.md  PHASE1_RULE_SNAPSHOT.md  PHILOSOPHY.md  RULES.md  SCORING.md
multi_repo_analyzer/: cli.py
multi_repo_analyzer/analyzer/: obfuscation.py  registry.py  secrets.py  static_code.py
multi_repo_analyzer/core/: models.py  scoring.py  suppression.py
multi_repo_analyzer/core/ai/: client.py  education.py  explain.py  output_sanitizer.py  prompts.py
multi_repo_analyzer/core/policy/: engine.py  profiles.py
multi_repo_analyzer/ingest/: walker.py
multi_repo_analyzer/report/: generator.py
multi_repo_analyzer/service/: app.py  github.py  github_fetcher.py  routes.py  routes_payments.py  scan_service.py
repo-frontend/: index.html  package-lock.json  package.json  vite.config.js
repo-frontend/src/: App.jsx  api.js  index.css  paymentApi.js
tests/: test_analyzer_framework.py  test_cicd_analyzer.py  test_cli_smoke.py  test_confidence_static.py  test_context_gating_static.py  test_correlation.py  test_dependency_analyzer.py  test_end_to_end.py  test_models.py  test_obfuscation_analyzer.py  test_positive_indicators.py  test_report_generator.py  test_safety.py  test_scoring.py  test_scoring_calibration.py  test_secrets_analyzer.py  test_service_scan.py  test_static_code_analyzer.py  test_suppression.py  test_walker.py
tests/fixtures/clean_repo/: README.md
(+5 files in other folders)
