[project]
name = "multi-repo-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "gunicorn==22.0.0",
    "pyjwt>=2.8.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
